# rp-turn

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ansible.yml  build.sh  mypy.ini  pyproject.toml  tasks.py  userdata.yaml
.github/workflows/: ansible.yml  ci.yml  cloud-init.yml  python.yml
buildtools/: ansible.py  cloud_init.py  debian.py  dev.py  python.py  ubuntu.py  utils.py  vmbuild.py
cloud-init/: README.md
cloud-init/installer/: meta-data  user-data
docs/deploy/: aws.md  vmware-vsphere.md  vsphere.md
files/etc/fail2ban/: jail.local
files/etc/fail2ban/filter.d/: pexiprp.conf
files/etc/nginx/: nginx.conf
files/etc/nginx/includes/: pex-rewrites.conf
files/etc/nginx/sites-available/: pexlog-filtered
files/etc/ssl/: pexip.cnf
files/etc/ssl/certs/: dhparam.pem
files/etc/sysctl.d/: 20-pexip-limits.conf
files/home/pexip/: .profile
files/usr/share/pam-configs/: pexpasswordpolicy
installwizard/: installwizard.py  step_error.py
installwizard/steps/: base_step.py  dns.py  dual_nic.py  network.py  snmp.py
installwizard/templates/: iptables.rules  snmpd.conf  turnserver.conf
installwizard/tests/: test_config_applicator.py
installwizard/tests/steps/: test_base.py  test_certificates.py  test_dns.py  test_dual_nic.py  test_routes.py  test_turnserver.py  test_web_load_balance.py
roles/apt/tasks/: main.yml
roles/fail2ban/tasks/: main.yml
roles/installwizard/files/: installwizard
roles/installwizard/tasks/: main.yml
roles/logrotate/files/: nginx
roles/logrotate/tasks/: main.yml
roles/munin/tasks/: main.yml
roles/nginx/files/: cleanup-sockets.conf  nginx.conf  proxy-defaults.conf
roles/nginx/files/www/stats/: index.html
roles/nginx/files/www/stats/css/: pex-rp.css
roles/nginx/tasks/: main.yml
roles/security/files/: pexiplimits.conf
roles/security/tasks/: main.yml
roles/set-interface-names/files/: 50-cloud-init.yaml  set-interface-names  set-interface-names.service
roles/set-interface-names/tasks/: main.yml
roles/version/files/: 99-rp-turn-motd
roles/version/tasks/: main.yml
roles/version/templates/: rp-turn-release
rp_turn/: config_applicator.py  installwizard.py  utils.py
rp_turn/steps/: certificates.py  fail2ban.py  hostname.py  management_networks.py  ntp.py  routes.py  turnserver.py  web_load_balance.py
rp_turn/templates/: nginx  ntp.conf
src/rp_turn/: __init__.py  config_applicator.py  filewriter.py  installwizard.py  step_error.py  utils.py
src/rp_turn/platform/: filewriter.py  set_interface_names.py
src/rp_turn/steps/: __init__.py  base_step.py  certificates.py  dns.py  dual_nic.py  fail2ban.py  hostname.py  management_networks.py  network.py  ntp.py  routes.py  snmp.py  turnserver.py  web_load_balance.py
src/rp_turn/templates/: hosts  nginx  turnserver.conf
src/rp_turn/tests/: test_config_applicator.py  test_installwizard.py  utils.py
src/rp_turn/tests/steps/: __init__.py  base_tests.py  test_base.py  test_certificates.py  test_dns.py  test_dual_nic.py  test_fail2ban.py  test_hostname.py  test_management_networks.py  test_network.py  test_ntp.py  test_routes.py  test_snmp.py  test_turnserver.py  test_web_load_balance.py
tests/: test_installwizard.py  utils.py
tests/steps/: base_tests.py  test_fail2ban.py  test_hostname.py  test_management_networks.py  test_network.py  test_ntp.py  test_snmp.py
vm_files/etc/fail2ban/action.d/: sendmail-whois-lines.local
vm_files/etc/netplan/: 01-netcfg.yaml
vm_files/etc/ssh/: sshd_config
vm_files/lib/systemd/system/: set-interface-names.service
vm_files/usr/sbin/: set-interface-names
vm_files/var/www/: 50x.html
