[tool.poetry]
name = "rp-turn"
version = "0.1.0"
description = "Pexip Reverse Proxy and Turn Server installwizard"
authors = ["Michael Oultram <michael.oultram@pexip.com>"]
readme = "README.md"
packages = [{include = "rp_turn"}]

[tool.poetry.dependencies]
python = "^3.7.1"
Twisted = "^22.10.0"
Pillow = "^9.4.0"
ipaddr = "^2.2.0"
requests = "^2.28.2"
passlib = "^1.7.4"
netifaces = "^0.11.0"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
