[tool.poetry]
name = "rp-turn"
version = "7.1.0"
description = "Pexip Reverse Proxy and Turn Server installwizard"
authors = ["Pexip R&D <rd@pexip.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{ include = "rp_turn", from = "src" }]
include = ["LICENSE"]
exclude = [
    "**/tests/**/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
passlib = "^1.7.4"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
mypy-extensions = "^1.0.0"
pytest = "^7.4.3"
coverage = "^7.3.4"
pylint = "^3.0.3"
types-passlib = "^1.7.7.13"
types-PyYAML = "^6.0.12.12"
yarl = "^1.9.4"
invoke = "^2.2.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pexip/rp-turn/issues"


[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.pylint.MASTER]
jobs = 0
persistent = true
suggestion-mode = true
disable = """
    fixme,
    duplicate-code,
"""

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.DESIGN]
max-args = 8
max-attributes = 10


[tool.mypy]
cache_dir = ".cache/mypy"
no_incremental = true
ignore_missing_imports = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true


[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
